# Ziggo-CaaS-Switch

./: README.md
Hardware/: .gitignore  README.md  init_os.sh
Software/Packetized-PLC-IO/: .gitignore  README.md  compile_openplc.sh  config.cpp  config.h  dma-proxy-plc.h  dnp3.cfg  dnp3.cpp  dnp3_dummy.disabled  glueVars.cpp  interactive_server.cpp  ladder.h  main.cpp  modbus.cpp  modbus_master.cpp  server.cpp
Software/Packetized-PLC-IO/config/: a380-config.json  a380-schedule.json  ring3-config.json
Software/Packetized-PLC-IO/hardware_layers/: blank.cpp  fischertechnik.cpp  neuron.cpp  pixtend.cpp  pixtend2l.cpp  pixtend2s.cpp  psm.cpp  raspberrypi.cpp  raspberrypi_old.cpp  simulink.cpp  unipi.cpp
Software/Packetized-PLC-IO/lib/: iec_std_FB.h  iec_std_functions.h  iec_std_lib.h  iec_types.h
Software/Packetized-PLC-IO/psm/: psm.py
Software/Packetized-PLC-IO/st_files/: test.st  test_complex.st  test_delay.st
Software/Packetized-PLC-IO/tsn_drivers/: .gitignore  compile.sh  gcl.c  gpio_reset.h  ptp_types.c  ptp_types.h  rtc.c  rtc.h  switch_rules.c  switch_rules.h  tagger.c  tagger.h  time_sync_main_loop.c  tsu.c  tsu.h  uio.c
Software/Time-Synchronization/: .gitignore  CMakeLists.txt  README.md  config.c  config.h  switch_config_main.c  time_sync_main_loop.c  topo.cpp  topo.h
Software/Time-Synchronization/config/: a380-config.json  bmca-config.json  bmca-schedule.json  ring3-config.json  ring3-schedule.json  simple-config.json  simple-schedule.json
Software/Time-Synchronization/dma_proxy/: buffer_queue.c  buffer_queue.h  dma-proxy-test.c  dma-proxy.c  dma-proxy.h
Software/Time-Synchronization/time_sync/: clock_master_sync_receive_sm.c  clock_master_sync_receive_sm.h  clock_master_sync_send_sm.c  clock_master_sync_send_sm.h  clock_slave_sync_sm.c  clock_slave_sync_sm.h  eth_frame.c  eth_frame.h  md_pdelay_req_sm.c  md_pdelay_req_sm.h  md_pdelay_resp_sm.c  md_pdelay_resp_sm.h  md_sync_receive_sm.c  md_sync_receive_sm.h  md_sync_send_sm.c  md_sync_send_sm.h  msg_frame.c  msg_frame.h  port_announce_information_ext_sm.c  port_announce_information_ext_sm.h  port_announce_information_sm.c  port_announce_information_sm.h  port_announce_transmit_sm.c  port_announce_transmit_sm.h  port_state_selection_sm.c  port_state_selection_sm.h  port_sync_sync_receive_sm.c  port_sync_sync_receive_sm.h  port_sync_sync_send_sm.c  port_sync_sync_send_sm.h  site_sync_sync_sm.c  site_sync_sync_sm.h  state_machines.h
Software/Time-Synchronization/tsn_drivers/: .gitignore  README.md  gcl.c  gcl.h  gpio_reset.c  ptp_types.c  ptp_types.h  rtc.c  rtc.h  switch_rules.c  tagger.c  tsu.c  uio.c  uio.h
docs/: contributing.md  hardware-build.md  required.md  software-build.md  system-design.md
